--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "9000:9000"
     volumes:
       - ../src:/var/www
+      - ./php-fpm/php.ini:/usr/local/etc/php/php.ini
 
   nginx:
     image: nginx:alpine
