--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -18,6 +18,8 @@ http {
     #access_log /dev/stdout;
     error_log /dev/stderr;
 
+    client_max_body_size 64M;
+
     sendfile        on;
     keepalive_timeout  65;
     
