--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,7 +1,8 @@
 FROM php:fpm-alpine
 
-RUN apk add zlib-dev
-RUN docker-php-ext-install mysqli zip
+RUN apk add zlib-dev libpng libpng-dev
+RUN docker-php-ext-install mysqli zip gd
+RUN apk del libpng-dev
 
 CMD ["php-fpm"]
 
